tests/snapshots/conformance__n_object_with_trailing_garbage.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":"b"}#
stdout --- 
<empty>
stderr --- 
error: unexpected character `#`. expected start of a json value
 --> stdin:1:10
  |
1 | {"a":"b"}#
  |          ^
