tests/snapshots/conformance__n_string_1_surrogate_then_escape_u1.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD800\u1"]
stdout --- 
<empty>
stderr --- 
error: expected hex digit 2 of 4 in escape, found `"`
 --> stdin:1:12
  |
1 | ["\uD800\u1"]
  |  -      -- ^
  |  |      |
  |  |      \u escape started here
  |  opening quote found here
