tests/snapshots/conformance__n_string_escaped_ctrl_char_tab.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\	"]
stdout --- 
<empty>
stderr --- 
error: expected escapable sequence, found `\t`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:4
  |
1 | ["\    "]
  |  --^^^^
  |  ||
  |  |escape slash found here
  |  opening quote found here
